# rsky

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile.web-client  README.md
.github/scripts/: determine-workspace-members.sh  update-image-tags.sh
.github/workflows/: build-rsky-feedgen.yml  build-rsky-jetstream-subscriber.yml  build-rsky-labeler.yml  build-rsky-pds.yml  build-rsky-relay.yml  build-web-client.yml  deploy.yaml  deploy.yml  rust.yml  smoke-test.yml
.kbd-orchestrator/: constraints.md  current-waypoint.json  current-waypoint.md  project.json
.kbd-orchestrator/phases/phase-0-foundation/: assessment.md  execution.md  plan.md  progress.json
.kbd-orchestrator/phases/phase-1-relay-feedgen/: assessment.md  execution.md  plan.md  progress.json
.kbd-orchestrator/phases/phase-1-rsky-appview/: progress.json  reflection.md
.kbd-orchestrator/phases/phase-2-appview-functional/: assessment.md  plan.md  progress.json
.kbd-orchestrator/phases/phase-2-commit-and-deploy/: assessment.md  execution.md  plan.md  progress.json
.kbd-orchestrator/phases/phase-3-pds-feature-parity/: assessment.md  execution.md  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/phase-prod-production-readiness/: assessment.md  reflection.md
docs/: STORAGE.md
k8s/: README.md  clusterissuer.yaml  namespace.yaml
k8s/argocd/: application.yaml
k8s/monitoring/: alerting-rules.yaml
k8s/pgbouncer/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
k8s/postgresql/: initdb-configmap.yaml  secret.yaml  service.yaml  statefulset.yaml  storageclass.yaml
k8s/rsky-appview/: gateway.yaml  httproute-https.yaml  httproute-redirect.yaml  podmonitoring.yaml  secret.yaml  service.yaml  statefulset.yaml
k8s/rsky-feedgen/: certificate.yaml  configmap.yaml  deployment.yaml  gateway.yaml  httproute-https.yaml  httproute-redirect.yaml  secret.yaml  service.yaml
k8s/rsky-jetstream-subscriber/: configmap.yaml  deployment.yaml  secret.yaml
k8s/rsky-labeler/: configmap.yaml  deployment.yaml  secret.yaml
k8s/rsky-pds/: README-handles.md  certificate.yaml  configmap.yaml  gateway.yaml  httproute-handles.yaml  httproute-https.yaml  httproute-redirect.yaml  secret.yaml  service.yaml  statefulset.yaml
k8s/rsky-relay/: certificate.yaml  gateway.yaml  httproute-https.yaml  httproute-redirect.yaml  podmonitoring.yaml  postgres-statefulset.yaml  secret.yaml  service.yaml  statefulset.yaml
k8s/rsky-wintermute/: certificate.yaml  httproute-https.yaml  httproute-redirect.yaml  secret.yaml  service.yaml  statefulset.yaml
k8s/web-client/: certificate.yaml  configmap.yaml  deployment.yaml  gateway.yaml  httproute-https.yaml  httproute-redirect.yaml  secret.yaml  service.yaml
openspec/changes/p0-c001/: proposal.md  tasks.md
openspec/changes/p0-c002/: proposal.md  tasks.md
openspec/changes/p0-c003/: proposal.md  tasks.md
openspec/changes/p0-c004/: proposal.md  tasks.md
openspec/changes/p0-c005/: proposal.md  tasks.md
openspec/changes/p1-c001/: proposal.md  tasks.md
openspec/changes/p1-c002/: proposal.md  tasks.md
openspec/changes/p1-c003/: proposal.md  tasks.md
openspec/changes/p1-c004/: proposal.md  tasks.md
openspec/changes/p1-c005/: proposal.md  tasks.md
openspec/changes/p1-c006/: proposal.md  tasks.md
openspec/changes/p2-c001/: proposal.md  tasks.md
openspec/specs/: 00-project-overview.md  01-web-client.md  02-infrastructure.md  03-agent-integration.md
rsky-appview/: Cargo.toml  Dockerfile
rsky-appview/crates/appview-api/: Cargo.toml
rsky-appview/crates/appview-api/src/: actor.rs  feed.rs  graph.rs  lib.rs  livekit.rs  notification.rs  unspecced.rs  webrtc.rs
rsky-appview/crates/appview-auth/: Cargo.toml
rsky-appview/crates/appview-auth/src/: lib.rs
rsky-appview/crates/appview-bin/: Cargo.toml
rsky-appview/crates/appview-bin/src/: main.rs
rsky-appview/crates/appview-core/: Cargo.toml
rsky-appview/crates/appview-core/src/: config.rs  error.rs  traits.rs  types.rs
rsky-appview/crates/appview-db/: Cargo.toml
rsky-appview/crates/appview-db/src/: actor.rs  feed.rs  generator.rs  graph.rs  lib.rs  models.rs  notification.rs
rsky-appview/crates/appview-firehose/: Cargo.toml
rsky-appview/crates/appview-firehose/src/: lib.rs
rsky-appview/crates/appview-identity/: Cargo.toml
rsky-appview/crates/appview-identity/src/: lib.rs
rsky-appview/crates/appview-indexer/: Cargo.toml
rsky-appview/crates/appview-indexer/src/: lib.rs
rsky-appview/crates/appview-labels/: Cargo.toml
rsky-appview/crates/appview-labels/src/: lib.rs
rsky-appview/crates/appview-lexicon/: Cargo.toml
rsky-appview/crates/appview-lexicon/src/: lib.rs
rsky-appview/crates/appview-lexicon/src/bsky/: actor.rs  feed.rs  graph.rs  notification.rs  unspecced.rs
rsky-appview/crates/appview-lexicon/src/knowme/: agent.rs  live.rs  mod.rs  video.rs
rsky-appview/crates/appview-livekit/: Cargo.toml
rsky-appview/crates/appview-livekit/src/: billing.rs  lib.rs  room.rs  token.rs
rsky-appview/crates/appview-queue/: Cargo.toml
rsky-appview/crates/appview-queue/src/: lib.rs
rsky-appview/crates/appview-webrtc/: Cargo.toml
rsky-appview/crates/appview-webrtc/src/: lib.rs  session.rs
rsky-appview/migrations/: 001_initial_schema.sql
rsky-common/src/: lib.rs  time.rs
rsky-feedgen/: Dockerfile
rsky-feedgen/src/: main.rs
rsky-firehose/: Dockerfile
rsky-identity/: Cargo.toml
rsky-identity/src/: types.rs
rsky-jetstream-subscriber/: Dockerfile
rsky-labeler/: Dockerfile
rsky-lexicon/: README.md  UPSTREAM_VERSION.md
rsky-oauth-scopes/: Cargo.toml
rsky-oauth-scopes/src/: error.rs  lib.rs
rsky-pds/: Cargo.toml  Dockerfile
rsky-pds/src/: auth_verifier.rs  crawlers.rs  lib.rs  pipethrough.rs  schema.rs
rsky-relay/: Cargo.toml  Dockerfile  rustfmt.toml
rsky-relay/migrations/: 001_hosts_and_bans.sql  002_plc_directory.sql
rsky-relay/src/: config.rs  lib.rs  main.rs
rsky-wintermute/: Dockerfile
scripts/: verify-config.sh
tests/conformance/: Dockerfile.driver  docker-compose.yml  run-conformance.sh
tests/e2e/: smoke_test.sh
(+135 files in other folders)
