[package]
name = "rsky-oauth-scopes"
version = "0.1.0"
edition = "2021"
description = "AT Protocol OAuth scope grammar — Rust port of @atproto/oauth-scopes"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0"

[dev-dependencies]
serde_json = { workspace = true }
