[package]
name = "appview-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
appview-core = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
axum = { workspace = true, features = ["macros"] }
chrono = { workspace = true }
tower = { workspace = true, features = ["util"] }
tokio = { workspace = true, features = ["rt", "macros"] }
