[package]
name = "appview-bin"
version = "0.1.0"
edition = "2024"

[dependencies]
appview-api = { path = "../appview-api" }
appview-core = { path = "../appview-core" }
appview-db = { path = "../appview-db" }
appview-firehose = { path = "../appview-firehose" }
appview-identity = { path = "../appview-identity" }
appview-indexer = { path = "../appview-indexer" }
appview-labels = { path = "../appview-labels" }
appview-livekit = { path = "../appview-livekit" }
appview-queue = { path = "../appview-queue" }
appview-webrtc = { path = "../appview-webrtc" }
axum = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "appview"
path = "src/main.rs"
