[package]
name = "appview-webrtc"
version = "0.1.0"
edition = "2024"

[dependencies]
appview-core = { path = "../appview-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
